--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@vercel/kv": "^1.0.0",
     "antd-mobile": "^5.33.0",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
